--- a/Tyuiu.ZhanabaevTA.Sprint6.Task2.V18/Tyuiu.ZhanabaevTA.Sprint6.Task2.V18.csproj
+++ b/Tyuiu.ZhanabaevTA.Sprint6.Task2.V18/Tyuiu.ZhanabaevTA.Sprint6.Task2.V18.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="WinForms.DataVisualization" Version="1.9.2" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Tyuiu.ZhanabaevTA.Sprint6.Task2.V18.Lib\Tyuiu.ZhanabaevTA.Sprint6.Task2.V18.Lib.csproj" />
   </ItemGroup>
 
