--- a/Tyuiu.ZhanabaevTA.Sprint6.Task7.V25/Tyuiu.ZhanabaevTA.Sprint6.Task7.V25.csproj
+++ b/Tyuiu.ZhanabaevTA.Sprint6.Task7.V25/Tyuiu.ZhanabaevTA.Sprint6.Task7.V25.csproj
@@ -8,4 +8,23 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Tyuiu.ZhanabaevTA.Sprint6.Task7.V25.Lib\Tyuiu.ZhanabaevTA.Sprint6.Task7.V25.Lib.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+
 </Project>
